--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,12 @@
                         <span class="nav-text">Inventory</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'market:index' %}" class="nav-link {% if request.resolver_match.app_name == 'market' %}active{% endif %}">
+                        <i class="fas fa-chart-line nav-icon"></i>
+                        <span class="nav-text">Market</span>
+                    </a>
+                </li>
                 <!-- Future navigation items will go here -->
             </ul>
         </nav>
