--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,14 +48,16 @@ body {
 }
 
 .sidebar-header {
-    padding: 20px;
+    padding: 14px;
     border-bottom: 1px solid var(--border-color);
     background-color: var(--bg-tertiary);
+    margin: 6px;
+    border-radius: 10px;
 }
 
 .sidebar-header h2 {
     color: var(--accent-blue);
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 600;
     text-align: center;
 }
